# genome

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  RELEASE_CHECKLIST.md  SECURITY.md  TRADEMARKS.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
benchmarks/: ANNOUNCEMENT.md  RESULTS.md  TCO.md  VERIFIED-NUMBERS.md  ab_graph_retrieval.py  ab_prompt.py  budget_ablation.py  budget_cluster.py  budget_fair.py  efficiency_scaling.py  haystack.py  haystack_recency.py  haystack_report.py  head_to_head.py  ingest_cost.py  lme_qa.py  lme_qa_or.py  lme_retrieval.py  local_writepath.py  mem0_autoresume.sh  parent_pairs.json  report.html  retrieval_hyde.py  retrieval_improve.py  retrieval_improve2.py  retrieval_quality.py  salience.py  tco.py  tco_project.py  tempbelief_run.py  tempbelief_verify.py  validate_prompt_fix.py  verdict.py
benchmarks/data/: README.md
benchmarks/mini_locomo/: __init__.py  data.py  llm.py  run.py  scoring.py  systems.py
docs/: api_reference.md  architecture.md  deployment.md  migrating_from_mem0.md  troubleshooting.md  tutorial_quickstart.md
examples/: agent_memory.py  chatbot.py  multi_user.py  rag_pipeline.py  regulated_memory_demo.py
genome/: __init__.py  benchmark.py  cli.py  corpus.py  dataset.py  embeddings.py  errors.py  evaluate.py  memory_benchmark.py  metrics.py  observability.py  operators.py  synthesis.py  verify.py  viz.py
genome/adapters/: __init__.py  langchain.py  llamaindex.py
genome/agent/: __init__.py  memory.py  tools.py
genome/evals/: __init__.py  baselines.py  llm_judge.py  locomo.py  tempbelief.py
notebooks/: genome_recombination_demo.ipynb
scripts/: locomo_calibrate.py  run_full_benchmark.py
tests/: conftest.py  test_auto_consolidation.py  test_auto_temporal.py  test_benchmark.py  test_conflict_resolution.py  test_corpus.py  test_dataset.py  test_embeddings.py  test_errors.py  test_evaluate.py  test_extraction_v2.py  test_head_to_head.py  test_hybrid_search.py  test_locomo_readiness_smoke.py  test_metrics.py  test_observability.py  test_operators_baseline.py  test_operators_crossover.py  test_operators_mutation.py  test_registry.py  test_smoke.py  test_synthesis.py  test_thread_safety.py  test_verify.py  test_viz.py
(+55 files in other folders)
